--- a/gallery.html
+++ b/gallery.html
@@ -67,21 +67,21 @@
 <div class="stripe">
 <div class="content_container">
 <section id="gallery" style="margin-top:10vh; margin-right:auto; margin-left:auto;">
-    <ul id="image_list">
-        <li><a href="images/bonsai-gallery-1.png"  title="Ficus Bonsai" id="first_link">
+    <ul class="image_list" id="image_list">
+        <li class="image_list"><a href="images/bonsai-gallery-1.png"  title="Ficus Bonsai" id="first_link">
           <img src="images/bonsai-gallery-1.png" width =60px height=40px alt=""></a></li>
-        <li><a href="images/bonsai-gallery-2.png" title="Japanese Maple Trees">
+        <li class="image_list"><a href="images/bonsai-gallery-2.png" title="Japanese Maple Trees">
           <img src="images/bonsai-gallery-2.png" width =60px height=40px alt=""></a></li>
-        <li><a href="images/bonsai-gallery-3.png" title="Chinese Elm">
+        <li class="image_list"><a href="images/bonsai-gallery-3.png" title="Chinese Elm">
           <img src="images/bonsai-gallery-3.png" width =60px height=40px alt=""></a></li>
-        <li><a href="images/bonsai-gallery-4.png" title="Satsuki Azalea">
+        <li class="image_list"><a href="images/bonsai-gallery-4.png" title="Satsuki Azalea">
           <img src="images/bonsai-gallery-4.png" width =60px height=40px alt=""></a></li>
-        <li><a href="images/bonsai-gallery-5.png" title="Birch Bonsai Trees">
+        <li class="image_list"><a href="images/bonsai-gallery-5.png" title="Birch Bonsai Trees">
           <img src="images/bonsai-gallery-5.png" width =60px height=40px alt=""></a></li>
-        <li><a href="images/bonsai-gallery-6.png" title="Juniper Bonsai">
+        <li class="image_list"><a href="images/bonsai-gallery-6.png" title="Juniper Bonsai">
           <img src="images/bonsai-gallery-6.png" width =60px height=40px alt=""></a></li>
-          <li><a href="images/bonsai-gallery-7.png" title="Pine Bonsai Trees">
-          <img src="images/bonsai-gallery-7.png" width =60px height=40px alt=""></a></li>
+        <li class="image_list"><a href="images/bonsai-gallery-7.png" title="Pine Bonsai Trees">
+        <img src="images/bonsai-gallery-7.png" width =60px height=40px alt=""></a></li>
     </ul>
     <h2 id="caption">Different Types Of Bonsai</h2>         
     <p><img src="images/bonsai-gallery-1.png" width =500px height=300px alt="" id="image"></p>
