--- a/gallery.html
+++ b/gallery.html
@@ -89,6 +89,51 @@
 </div>
 </div>
 
+<!-- New slideshow-->
+<div class ="slideshow">
+  <h2>Even more bonsai photos to inspire you:</h2>
+</div>
+  <div class="slide">
+    <div class="content_container"> 
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1/5</div>
+            <img src="images/1.jpeg" style="width:100%" alt="Bonsai 1">
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext">2/5</div>
+            <img src="images/2.jpeg" style="width:100%" alt="Bonsai">
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext">3/5</div>
+            <img src="images/3.jpeg" style="width:100%" alt="Bonsai">
+        </div>
+        <div class="mySlides fade">
+            <div class="numbertext">4/5</div>
+            <img src="images/4.jpeg" style="width:100%" alt="Bonsai">
+        </div>
+        <div class="mySlides fade">
+          <div class="numbertext">5/5</div>
+          <img src="images/5.jpeg" style="width:100%" alt="Bonsai">
+      </div>
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br>
+      <!-- The dots/circles -->
+      <div style="text-align:center">
+          <span class="dot" onclick="currentSlide(1)"></span> 
+          <span class="dot" onclick="currentSlide(2)"></span> 
+          <span class="dot" onclick="currentSlide(3)"></span>
+          <span class="dot" onclick="currentSlide(4)"></span>
+          <span class="dot" onclick="currentSlide(5)"></span>
+      </div>
+    </div>
+  </div>
+
 <!-- top button -->
 <button onclick="topFunction()" id="top" title="Go to top">Top</button>
 
