--- a/home.html
+++ b/home.html
@@ -122,11 +122,11 @@
             </button>
         </div>
         <div class="content_item">
-          <h3>Information</h3>
+          <h3>Gallery</h3>
           <hr>
-          <p class="content"></p>
+          <p class="content">Enjoy the beauty of Bonsai through our gallery!</p>
             <button class="content_information">
-              <a href="calculator.html">Learn more</a>
+              <a href="Gallery.html">Gallery</a>
             </button>
         </div>
         <div class="content_item">
