--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
 
 <div class="stripe">
 <div class="content_container">
-<section id="gallery" style="margin-top:10vh; margin-right:auto; margin-left:auto;">
+<section class="gallery" id="gallery">
     <ul class="image_list" id="image_list">
         <li class="image_list"><a href="images/bonsai-gallery-1.png"  title="Ficus Bonsai" id="first_link">
           <img src="images/bonsai-gallery-1.png" width =60px height=40px alt=""></a></li>
