--- a/calculator.html
+++ b/calculator.html
@@ -56,7 +56,7 @@
   <nav class="stripe menubar">
       <div class="content_container">
         <ul>
-          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span></li>
+          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
           <li><a href="calculator.html">CALCULATOR</a></li>
