--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link href='https://fonts.googleapis.com/css?family=Rozha One' rel='stylesheet'>
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style-home.css">
+  <link rel="stylesheet" href="style-index.css">
   <script src="java.js" defer ></script>
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -23,7 +23,7 @@
   <nav class="stripe menubar">
       <div class="content_container">
         <ul>
-          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="home.html">Bonsai</a></span></li>
+          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
           <li><a href="calculator.html">CALCULATOR</a></li>
