--- a/information.html
+++ b/information.html
@@ -29,7 +29,7 @@
       <div class="content_container">
         <ul>
           <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" 
-            href="home.html">Bonsai</a></span></li>
+            href="index.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
           <li><a href="calculator.html">CALCULATOR</a></li>
