--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <button onclick="topFunction()" id="top" title="Go to top">Top</button>
   <footer class="footer">
     <div class="footer1">
-      <p class="logoend" href="home.html"><a>Bonsai</a></p>
+      <p class="logoend" href="index.html"><a>Bonsai</a></p>
       <img class="logoend" src="images/logo.png">
     </div>
     <div class="footer2">
