--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <nav class="stripe menubar">
       <div class="content_container">
-        <ul>
+        <ul class="topnav" id="myTopnav">
           <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
           <li><a href="information.html">INFORMATION</a></li>
           <li><a href="FAQ.html">FAQ</a></li>
@@ -30,7 +30,7 @@
           <li><a href="gallery.html">GALLERY</a></li>
           <li><a href="contactus.html">CONTACT US</a></li>
           <li></li>
-          <li></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a></li>
           <li>
             <input type="text" placeholder="Search..">
           </li>
