--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
 <body>
   <nav class="stripe menubar">
       <div class="content_container">
-        <ul class="topnav" id="myTopnav">
-          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
-          <li><a href="information.html">INFORMATION</a></li>
-          <li><a href="FAQ.html">FAQ</a></li>
-          <li><a href="calculator.html">CALCULATOR</a></li>
-          <li><a href="gallery.html">GALLERY</a></li>
-          <li><a href="contactus.html">CONTACT US</a></li>
-          <li></li>
-          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a></li>
-          <li>
+        <div class="topnav" id="myTopnav">
+          <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo" href="index.html">Bonsai</a></span>
+          <a href="information.html">INFORMATION</a>
+          <a href="FAQ.html">FAQ</a>
+          <a href="calculator.html">CALCULATOR</a>
+          <a href="gallery.html">GALLERY</a>
+          <a href="contactus.html">CONTACT US</a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+          <a>
             <input type="text" placeholder="Search..">
-          </li>
+          </a>
         </ul>
       </div>
   </nav>
