--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
 <body>
   <nav class="stripe menubar">
       <div class="content_container">
+        <ul>
+          <li style="float: left;"><img class="logo" src="images/logo.png"><span><a class="logo" href="index.html">Bonsai</a></span></li>
+          <li><a href="information.html">INFORMATION</a></li>
+          <li><a href="FAQ.html">FAQ</a></li>
+          <li><a href="calculator.html">CALCULATOR</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="contactus.html">CONTACT US</a></li>
+          <li></li>
+          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a></li>
+          <li>
+            <input type="text" placeholder="Search..">
+          </li>
+        </ul>
         <div class="topnav" id="myTopnav">
           <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo" href="index.html">Bonsai</a></span>
           <a href="information.html">INFORMATION</a>
@@ -30,10 +43,8 @@
           <a href="gallery.html">GALLERY</a>
           <a href="contactus.html">CONTACT US</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
-          <a>
-            <input type="text" placeholder="Search..">
-          </a>
         </ul>
+      </div>
       </div>
   </nav>
   <!--If you copy the menubar, make sure to copy all the tag in the css --> 
