--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a href="calculator.html">CALCULATOR</a>
           <a href="gallery.html">GALLERY</a>
           <a href="contactus.html">CONTACT US</a>
-          <a><i class="fa fa-search"></i></a>
+          <a class="icon"><i class="fa fa-search"></i></a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         </ul>
       </div>
