--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <a href="calculator.html">CALCULATOR</a>
           <a href="gallery.html">GALLERY</a>
           <a href="contactus.html">CONTACT US</a>
-          <a class="icon"><i class="fa fa-search"></i></a>
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+          <a class="icon1"><i class="fa fa-search"></i></a>
+          <a href="javascript:void(0);" class="icon2" onclick="myFunction()"><i class="fa fa-bars"></i></a>
         </ul>
       </div>
       </div>
