--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style-gallery.css">
   <script src="java.js" defer ></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <meta name="theme-color" content="#fafafa">
 
   <script>
