--- a/FAQ.html
+++ b/FAQ.html
@@ -54,6 +54,7 @@
 </div>
 </div>
 
+<div class="stripe fact">
 <section style="margin-top:3em;margin-right:4em;" class="button-containter">
   <button class="accordion">Bonsai Tree Care</button>
   <div class="panel bonsai-tree-care">
@@ -91,6 +92,7 @@
           <p>Overall, it comes down to where your Bonsai will be kept that impacts which one you should get! However, all of these are great options!</p>
       </div>
   </section>
+</div>
 
   <script>
     function openNav() {
