--- a/FAQ.html
+++ b/FAQ.html
@@ -55,6 +55,7 @@
 </div>
 
 <div class="stripe fact">
+  <div class="content_container">
 <section style="margin-top:3em;margin-right:4em;" class="button-containter">
   <button class="accordion">Bonsai Tree Care</button>
   <div class="panel bonsai-tree-care">
@@ -92,6 +93,7 @@
           <p>Overall, it comes down to where your Bonsai will be kept that impacts which one you should get! However, all of these are great options!</p>
       </div>
   </section>
+</div>
 </div>
 
   <script>
