--- a/FAQ.html
+++ b/FAQ.html
@@ -56,7 +56,7 @@
 
 <div class="stripe fact">
   <div class="content_container">
-<section style="margin-top:3em;margin-right:4em;" class="button-containter">
+<section class="button-containter">
   <button class="accordion">Bonsai Tree Care</button>
   <div class="panel bonsai-tree-care">
       <p>Bonsai trees are planted in small pots with minimal water and nutrient reserves! In order to keep your Bonsai healthy you need to water and fertilize regularly. They require lots of water, light, and fertilizer in order to really thrive!</p>
