--- a/information.html
+++ b/information.html
@@ -93,7 +93,7 @@
       <!-- Slideshow container -->
       <div class="slideshow-container">
         <!-- Full-width images with number and caption text -->
-        <div class="mySlides fade" id="mySlides">
+        <div class="mySlides fade">
             <div class="numbertext">1/7</div>
             <img src="images/bonsai-house.jpeg" style="width:100%" alt="Bonsai in front of an old house">
             <div class="text">The ultimate goal of growing a Bonsai is to create a miniaturized but 
@@ -102,7 +102,7 @@
               meticulously shaped and cultivated to form a stunning Bonsai creation.
             </div>
         </div>
-        <div class="mySlides fade" id="mySlides">
+        <div class="mySlides fade">
             <div class="numbertext">2/7</div>
             <img src="images/bonsai-inside.jpeg" style="width:100%" alt="Bonsai inside a home">
             <div class="text">The art of Bonsai offers a plethora of styles to choose from, 
@@ -110,7 +110,7 @@
               let us begin with the five basic forms, which are defined by the tree's angle of growth from a container.
               This tree is in the Slanting Style - shakan. </div>
         </div>
-        <div class="mySlides fade" id="mySlides">
+        <div class="mySlides fade">
             <div class="numbertext">3/7</div>
             <img src="images/bonsai-straight.jpeg" style="width:100%" alt="Small straight bonsai">
             <div class="text">This particular Bonsai tree showcases the Informal Upright Style - Moyogi. 
@@ -120,7 +120,7 @@
               in an open area without any physical stress. 
               </div>
         </div>
-        <div class="mySlides fade" id="mySlides">
+        <div class="mySlides fade">
             <div class="numbertext">4/7</div>
             <img src="images/bonsai-cascade.jpeg" style="width:100%" alt="A cascade-style bonsai">
             <div class="text">The Full Cascade Style and the Semi-Cascade Style feature trees that 
@@ -129,7 +129,7 @@
               Trees in the latter category, known as han-kengai, extend below the top of the container, 
               but the apex doesn't extend below the base.</div>
         </div>
-        <div class="mySlides fade" id="mySlides">
+        <div class="mySlides fade">
           <div class="numbertext">5/7</div>
           <img src="images/bonsai-pruning.jpeg" style="width:100%" alt="Hands pruning a bonsai">
           <div class="text">Growing bonsai trees involves controlling their shape by bending branches or cutting them off, 
@@ -137,7 +137,7 @@
             so we can't control them completely. Instead of forcing them to conform, we should appreciate and respect 
             their individuality.</div>
       </div>
-      <div class="mySlides fade" id="mySlides">
+      <div class="mySlides fade">
         <div class="numbertext">6/7</div>
         <img src="images/bonsai-watered.jpeg" style="width:100%" alt="A bonsai has just been watered">
         <div class="text">In addition to the aesthetic aspect, bonsai growing also provides a sense of 
@@ -145,7 +145,7 @@
           and it's the responsibility of the grower to provide the necessary care and attention to keep the tree 
           healthy and thriving.</div>
       </div>
-      <div class="mySlides fade" id="mySlides">
+      <div class="mySlides fade">
         <div class="numbertext">7/7</div>
         <img src="images/bonsai-grow.jpeg" style="width:100%" alt="A garden of bonsais">
         <div class="text">Bonsai, unlike most other forms of art, are never truly "complete" as long as the trees 
