--- a/calculator.html
+++ b/calculator.html
@@ -92,7 +92,7 @@
 
 <main>
  <!-- form input -->
-    <div class="form-container";>
+    <div class="stripe form-container";>
         <h3>Appreciate the age of the tree. Please select the tree type and specify the stem circumference / diameter in cm or inch. The stem circumference is measured at a height of 1.00 m (3.3 ft.) to 1.50 m (4.5 ft.).</h1>
         <form>
           <label for="type"><b>Tree Type</b></label>
