--- a/calculator.html
+++ b/calculator.html
@@ -90,9 +90,9 @@
   </div>
   </div>
 
-<main>
  <!-- form input -->
     <div class="stripe form-container";>
+      <div class="content_container">
         <h3>Appreciate the age of the tree. Please select the tree type and specify the stem circumference / diameter in cm or inch. The stem circumference is measured at a height of 1.00 m (3.3 ft.) to 1.50 m (4.5 ft.).</h1>
         <form>
           <label for="type"><b>Tree Type</b></label>
@@ -153,7 +153,7 @@
           <input type="button" id="calculate" value="Calculate"/>		
         </form>
       </div>
-</main>
+      </div>
 
 <!-- top button -->
 <button onclick="topFunction()" id="top" title="Go to top">Top</button>
