--- a/gallery.html
+++ b/gallery.html
@@ -71,6 +71,17 @@
             <input type="text" placeholder="Search..">
           </li>
         </ul>
+      </ul>
+      <div class="topnav" id="myTopnav">
+        <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo" href="index.html">Bonsai</a></span>
+        <a href="information.html">INFORMATION</a>
+        <a href="FAQ.html">FAQ</a>
+        <a href="calculator.html">CALCULATOR</a>
+        <a href="gallery.html">GALLERY</a>
+        <a href="contactus.html">CONTACT US</a>
+        <a href="javascript:void(0);" class="icon2" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        <a class="icon1"><i class="fa fa-search"></i></a>
+      </ul>
       </div>
 </nav>
 
