--- a/gallery.html
+++ b/gallery.html
@@ -87,7 +87,7 @@
 
 <div class="stripe introduction">
   <div class="content_container">
-  <h1><b>Gallery</b></h1><br>
+  <h1>Gallery</h1><br>
   <h2>Enjoy the beauty of Bonsai!<br>We have curated a gallery with different types of Bonsai and included their names.</h2>
 </div>
 </div>
