--- a/gallery.html
+++ b/gallery.html
@@ -97,19 +97,19 @@
 <section class="gallery" id="gallery">
     <ul class="image_list" id="image_list">
         <li class="image_list"><a href="images/bonsai-gallery-1.png"  title="Ficus Bonsai" id="first_link">
-          <img src="images/bonsai-gallery-1.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-1.png" class="image_small" alt=""></a></li>
         <li class="image_list"><a href="images/bonsai-gallery-2.png" title="Japanese Maple Trees">
-          <img src="images/bonsai-gallery-2.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-2.png" class="image_small" alt=""></a></li>
         <li class="image_list"><a href="images/bonsai-gallery-3.png" title="Chinese Elm">
-          <img src="images/bonsai-gallery-3.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-3.png" class="image_small" alt=""></a></li>
         <li class="image_list"><a href="images/bonsai-gallery-4.png" title="Satsuki Azalea">
-          <img src="images/bonsai-gallery-4.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-4.png" class="image_small" alt=""></a></li>
         <li class="image_list"><a href="images/bonsai-gallery-5.png" title="Birch Bonsai Trees">
-          <img src="images/bonsai-gallery-5.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-5.png" class="image_small" alt=""></a></li>
         <li class="image_list"><a href="images/bonsai-gallery-6.png" title="Juniper Bonsai">
-          <img src="images/bonsai-gallery-6.png" width =60px height=40px alt=""></a></li>
+          <img src="images/bonsai-gallery-6.png" class="image_small" alt=""></a></li>
         <li class="image_list"><a href="images/bonsai-gallery-7.png" title="Pine Bonsai Trees">
-        <img src="images/bonsai-gallery-7.png" width =60px height=40px alt=""></a></li>
+        <img src="images/bonsai-gallery-7.png" class="image_small" alt=""></a></li>
     </ul>
     <h2 id="caption">Types Of Bonsai</h2>         
     <p><img src="images/bonsai-gallery-1.png" width =500px height=300px alt="" id="image"></p>
