--- a/gallery.html
+++ b/gallery.html
@@ -112,7 +112,7 @@
         <img src="images/bonsai-gallery-7.png" class="image_small" alt=""></a></li>
     </ul>
     <h2 id="caption">Types Of Bonsai</h2>         
-    <p><img src="images/bonsai-gallery-1.png" width =500px height=300px alt="" id="image"></p>
+    <p><img src="images/bonsai-gallery-1.png" class="image_large" alt="" id="image"></p>
 </section>	
 </div>
 </div>
