--- a/gallery.html
+++ b/gallery.html
@@ -88,7 +88,7 @@
 <div class="stripe introduction">
   <div class="content_container">
   <h1>Gallery</h1>
-  <h2>Enjoy the beauty of Bonsai!<br>We have curated a gallery with different types of Bonsai and included their names.</h2>
+  <h2>Enjoy the beauty of Bonsai! We have curated a gallery with different types of Bonsai and included their names.</h2>
 </div>
 </div>
 
