--- a/gallery.html
+++ b/gallery.html
@@ -131,11 +131,11 @@
   data-loop="true"
   data-click="true"
   data-swipe="true">
-  <a href="images/1.jpeg"><img src="images/1.jpeg" class="fotorama_image"></a>
-  <a href="images/2.jpeg"><img src="images/2.jpeg" class="fotorama_image"></a>
-  <a href="images/3.jpeg"><img src="images/3.jpeg" class="fotorama_image"></a>
-  <a href="images/4.jpeg"><img src="images/4.jpeg" class="fotorama_image"></a>
-  <a href="images/5.jpeg"><img src="images/5.jpeg" class="fotorama_image"></a>
+  <a href="images/1.jpeg"><img src="images/1.jpeg"></a>
+  <a href="images/2.jpeg"><img src="images/2.jpeg"></a>
+  <a href="images/3.jpeg"><img src="images/3.jpeg"></a>
+  <a href="images/4.jpeg"><img src="images/4.jpeg"></a>
+  <a href="images/5.jpeg"><img src="images/5.jpeg"></a>
 
 </div> 
 
