--- a/gallery.html
+++ b/gallery.html
@@ -118,7 +118,8 @@
 </div>
 
 <!-- New slideshow-->
-<div class ="slideshow">
+<div class ="stripe slideshow">
+  <div class="content_container">
   <h2>Even more bonsai photos to inspire you:</h2>
 </div>
 <div class="fotorama"
@@ -136,7 +137,7 @@
   <a href="images/3.jpeg"><img src="images/3.jpeg"></a>
   <a href="images/4.jpeg"><img src="images/4.jpeg"></a>
   <a href="images/5.jpeg"><img src="images/5.jpeg"></a>
-
+</div>
 </div> 
 
 <!-- top button -->
