--- a/contactus.html
+++ b/contactus.html
@@ -36,12 +36,23 @@
             <input type="text" placeholder="Search..">
           </li>
         </ul>
+        <div class="topnav" id="myTopnav">
+          <img class="logo" src="images/logo.png" style="float: left;"><span><a class="logo" href="index.html">Bonsai</a></span>
+          <a href="information.html">INFORMATION</a>
+          <a href="FAQ.html">FAQ</a>
+          <a href="calculator.html">CALCULATOR</a>
+          <a href="gallery.html">GALLERY</a>
+          <a href="contactus.html">CONTACT US</a>
+          <a href="javascript:void(0);" class="icon2" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+          <a class="icon1"><i class="fa fa-search"></i></a>
+        </ul>
+        </div>
       </div>
 </nav>
 
   <div class="stripe introduction">
     <div class="content_container">
-    <h1>Contact Us</h1><br>
+    <h1>Contact Us</h1>
     <h2>Fill the form to add a new bonsai tree to our website</h2>
   </div>
   </div>
