--- a/contactus.html
+++ b/contactus.html
@@ -57,9 +57,9 @@
   </div>
   </div>
 
-<main>
+<div class="stripe main">
  <!-- form input -->
-    <div class="form-container";>
+    <div class="content-container";>
         <h1>Submission Form</h1>
         <form>
           <label for="name">Name:</label>
@@ -81,7 +81,7 @@
           <input type="submit" value="Submit">
         </form>
       </div>
-</main>
+    </div>
 
 <!-- top button -->
 <button onclick="topFunction()" id="top" title="Go to top">Top</button>
