--- a/contactus.html
+++ b/contactus.html
@@ -59,7 +59,7 @@
 
 <div class="stripe main">
  <!-- form input -->
-    <div class="content-container";>
+    <div class="content_container";>
         <h1>Submission Form</h1>
         <form>
           <label for="name">Name:</label>
