--- a/contactus.html
+++ b/contactus.html
@@ -60,6 +60,7 @@
 <div class="stripe main">
  <!-- form input -->
     <div class="content_container";>
+      <div class="container">
         <h1>Submission Form</h1>
         <form>
           <label for="name">Name:</label>
@@ -80,6 +81,7 @@
           <!-- submit button -->
           <input type="submit" value="Submit">
         </form>
+      </div>
       </div>
     </div>
 
