--- a/calculator.html
+++ b/calculator.html
@@ -91,8 +91,9 @@
   </div>
 
  <!-- form input -->
-    <div class="stripe form-container";>
+    <div class="stripe form";>
       <div class="content_container">
+        <div class="form-container">
         <h3>Appreciate the age of the tree. Please select the tree type and specify the stem circumference / diameter in cm or inch. The stem circumference is measured at a height of 1.00 m (3.3 ft.) to 1.50 m (4.5 ft.).</h1>
         <form>
           <label for="type"><b>Tree Type</b></label>
@@ -152,6 +153,7 @@
           <br />
           <input type="button" id="calculate" value="Calculate"/>		
         </form>
+      </div>
       </div>
       </div>
 
